Start removing jQuery

--- a/example/jade/javascript.jade
+++ b/example/jade/javascript.jade
@@ -1,5 +1,5 @@
 script(src=resourceBasePath + 'js/handlebars.js')
-script(src=resourceBasePath + 'js/jquery.js')
+// script(src=resourceBasePath + 'js/jquery.js')
 script(src=resourceBasePath + 'js/mousetrap.js')
 script(src=resourceBasePath + 'js/mousetrap_config.js')
 script(src=resourceBasePath + '../bullets.js')
