--- a/test/lib/jade/javascript.jade
+++ b/test/lib/jade/javascript.jade
@@ -1,3 +1,4 @@
 script(src='js/test_helper.js')
 script(src=nodeModulesPath + 'mocha/mocha.js')
 script(src=nodeModulesPath + 'chai/chai.js')
+script(src=nodeModulesPath + 'sinon/pkg/sinon.js')
