Use node sinon chai

--- a/test/lib/jade/javascript.jade
+++ b/test/lib/jade/javascript.jade
@@ -2,3 +2,4 @@ script(src='js/test_helper.js')
 script(src=nodeModulesPath + 'mocha/mocha.js')
 script(src=nodeModulesPath + 'chai/chai.js')
 script(src=nodeModulesPath + 'sinon/pkg/sinon.js')
+script(src=nodeModulesPath + 'sinon-chai/lib/sinon-chai.js')
