Setup gulp watch

--- a/example/src/jade/index.jade
+++ b/example/src/jade/index.jade
@@ -1,9 +1,9 @@
-doctype 5
+doctype html
 html(lang="en")
   head
     meta(charset="utf-8")
     title= "Bullets Demo"
-    - var resourceBasePath = './'
+    - var resourceBasePath = '../lib/'
     include css.jade
     include javascript.jade
   body
