--- a/example/src/jade/content.jade
+++ b/example/src/jade/content.jade
@@ -1,10 +1,1 @@
-- var sections = 10
-- var sectionSize = 5
-- for (var section = 0; section < sections; section++)
-  section
-    header
-      h5
-        a(href='google.com') Anchor #{section}
-      ul
-        - for (var listItem = 0; listItem < sectionSize; listItem++)
-          li List Item #{listItem}
+include:markdown ../markdown/content.md
