Refine scrolling behavior

--- a/example/src/jade/content.jade
+++ b/example/src/jade/content.jade
@@ -1,1 +1,20 @@
-include:markdown ../markdown/content.md
+section
+  header
+    h2 Complex Content
+  article#complex-content
+    include:markdown ../markdown/complex-content.md
+section
+  header
+    h2 Ordered List
+  article#ordered-list
+    include:markdown ../markdown/ordered-list.md
+section
+  header
+    h2 Simple Content
+  article#simple-content
+    include:markdown ../markdown/simple-content.md
+section
+  header
+    h2 Unordered List
+  article#unordered-list
+    include:markdown ../markdown/unordered-list.md
