--- a/example/lib/css/bullets.css
+++ b/example/lib/css/bullets.css
@@ -3,14 +3,17 @@
 }
 
 .bullets-collapsed {
-	border: 1px solid red;
+	background-color: yellow !important;
+/*	border: 1px solid red;*/
 }
 
 /* Hierarchical */
 .bullets-collapsed li {
 /* 	display: none; */
-	border: 1px solid blue;
+/*	border: 1px solid blue;
 	background-color: yellow;
+*/
+	display: none;
 }
 
 /* Headers */
@@ -34,9 +37,10 @@ h4.bullets-collapsed ~ *:not(h1):not(h2):not(h3):not(h4),
 h5.bullets-collapsed ~ *:not(h1):not(h2):not(h3):not(h4):not(h5),
 h6.bullets-collapsed ~ *:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6)
 {
-	border: 1px solid blue;
+	display: none;
+/*	border: 1px solid blue;
 	background-color: yellow;
-}
+*/}
 
 h1.bullets-collapsed ~ h1 ~ *,
 
@@ -65,8 +69,10 @@ h6.bullets-collapsed ~ h4 ~ *,
 h6.bullets-collapsed ~ h5 ~ *,
 h6.bullets-collapsed ~ h6 ~ *
 {
-	border: none  !important;
+/*	border: none  !important;
 	background-color: transparent !important;
+*/
+	display: inherit !important;
 }
 
 
