Lay groundwork for multiple selections

--- a/test/src/jade/index.jade
+++ b/test/src/jade/index.jade
@@ -10,5 +10,6 @@ html(lang="en")
     include ../../../example/src/jade/css.jade
     include ../../../example/src/jade/javascript.jade
   body
-    include ../../../example/src/jade/content.jade
+    article#test-content
+      include ../../../example/src/jade/content.jade
     include mocha.html
