--- a/test/src/jade/visible-elements-tests.jade
+++ b/test/src/jade/visible-elements-tests.jade
@@ -1,8 +1,8 @@
-h1 Header 1
-p Paragraph 1
-h2#vet-hidden-paragraph(style='display: none;') Header 2
-p Paragraph 2
+h1 h2-1
+p p-1
+h2#test-1(style='display: none;' data-backward='h2-1' data-forward='li-2') h2-1
+p p-1
 ul
-  li(style='display: none;') Item One
-  li Item Two
-  li Item Three
+  li(style='display: none;') li-1
+  li li-2
+  li li-3
