--- a/test/src/jade/visible-elements-tests.jade
+++ b/test/src/jade/visible-elements-tests.jade
@@ -1,6 +1,7 @@
-h1 h2-1
+h1#test-1(style='display: none;' data-forward='h3-1') h1-1
 p p-1
-h2#test-1(style='display: none;' data-backward='h2-1' data-forward='li-2') h2-1
+h3 h3-1
+h2#test-2(style='display: none;' data-backward='h3-1' data-forward='li-2') h2-1
 p p-1
 ul
   li(style='display: none;') li-1
