Test non-hidden element

--- a/test/src/jade/visible-elements-tests.jade
+++ b/test/src/jade/visible-elements-tests.jade
@@ -5,5 +5,5 @@ h2#test-2(style='display: none;' data-backward='h3-1' data-forward='li-2') h2-1
 p p-1
 ul
   li(style='display: none;') li-1
-  li li-2
+  li#test-3(data-backward='li-2' data-forward='li-2') li-2
   li li-3
