Work on DOM traversal

--- a/test/src/jade/visible-elements-tests.jade
+++ b/test/src/jade/visible-elements-tests.jade
@@ -7,3 +7,15 @@ ul
   li(style='display: none;') li-1
   li#test-3(data-backward='li-2' data-forward='li-2') li-2
   li li-3
+ul
+  li li-4
+  li#test-4(style='display: none;' data-backward='li-4' data-forward='li-9') li-5
+ul
+  li(style='display: none;') li-6
+    ul 
+      li li-7
+ul
+  li#test-5(style='display: none;' data-backward='li-4' data-forward='li-9') li-8
+ul
+  li li-9
+  li#test-6(style='display: none;' data-backward='li-9')
