Setup collapse-selection test data

--- a/test/src/jade/index.jade
+++ b/test/src/jade/index.jade
@@ -12,4 +12,6 @@ html(lang="en")
   body
     article#test-content
       include ../../../example/src/jade/content.jade
+    article#collapse-selection-tests
+      include collapse-selection-tests.jade
     include mocha.html
