Most select next tests passing

--- a/test/src/jade/collapse-selection-tests.jade
+++ b/test/src/jade/collapse-selection-tests.jade
@@ -57,7 +57,7 @@ ul
       li li-27
     p p-5
     h2 h2-2
-    h1#test-11(data-backward='h1-4' data-forward='li-28') h1-5
+    h1#test-11.bullets-collapsed(data-backward='h1-4' data-forward='li-28') h1-5
     h2 h2-3
   li li-28
 h2 h2-3
