--- a/example/lib/css/bullets.css
+++ b/example/lib/css/bullets.css
@@ -1,10 +1,10 @@
-.bullets-selected {
-	background-color: #BCD7D5;
+body .bullets-selected {
+	background-color: #BCD7D5 !important;
 }
 
 .bullets-collapsed {
 	background-color: yellow !important;
-/*	border: 1px solid red;*/
+	border-right: 1px solid red;
 }
 
 /* Hierarchical */
@@ -42,32 +42,32 @@ h6.bullets-collapsed ~ *:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6)
 	background-color: yellow;
 */}
 
-h1.bullets-collapsed ~ h1 ~ *,
+h1.bullets-collapsed ~ h1:not(.bullets-collapsed) ~ *,
 
-h2.bullets-collapsed ~ h1 ~ *,
-h2.bullets-collapsed ~ h2 ~ *,
+h2.bullets-collapsed ~ h1:not(.bullets-collapsed) ~ *,
+h2.bullets-collapsed ~ h2:not(.bullets-collapsed) ~ *,
 
-h3.bullets-collapsed ~ h1 ~ *,
-h3.bullets-collapsed ~ h2 ~ *,
-h3.bullets-collapsed ~ h3 ~ *,
+h3.bullets-collapsed ~ h1:not(.bullets-collapsed) ~ *,
+h3.bullets-collapsed ~ h2:not(.bullets-collapsed) ~ *,
+h3.bullets-collapsed ~ h3:not(.bullets-collapsed) ~ *,
 
-h4.bullets-collapsed ~ h1 ~ *,
-h4.bullets-collapsed ~ h2 ~ *,
-h4.bullets-collapsed ~ h3 ~ *,
-h4.bullets-collapsed ~ h4 ~ *,
+h4.bullets-collapsed ~ h1:not(.bullets-collapsed) ~ *,
+h4.bullets-collapsed ~ h2:not(.bullets-collapsed) ~ *,
+h4.bullets-collapsed ~ h3:not(.bullets-collapsed) ~ *,
+h4.bullets-collapsed ~ h4:not(.bullets-collapsed) ~ *,
 
-h5.bullets-collapsed ~ h1 ~ *,
-h5.bullets-collapsed ~ h2 ~ *,
-h5.bullets-collapsed ~ h3 ~ *,
-h5.bullets-collapsed ~ h4 ~ *,
-h5.bullets-collapsed ~ h5 ~ *,
+h5.bullets-collapsed ~ h1:not(.bullets-collapsed) ~ *,
+h5.bullets-collapsed ~ h2:not(.bullets-collapsed) ~ *,
+h5.bullets-collapsed ~ h3:not(.bullets-collapsed) ~ *,
+h5.bullets-collapsed ~ h4:not(.bullets-collapsed) ~ *,
+h5.bullets-collapsed ~ h5:not(.bullets-collapsed) ~ *,
 
-h6.bullets-collapsed ~ h1 ~ *,
-h6.bullets-collapsed ~ h2 ~ *,
-h6.bullets-collapsed ~ h3 ~ *,
-h6.bullets-collapsed ~ h4 ~ *,
-h6.bullets-collapsed ~ h5 ~ *,
-h6.bullets-collapsed ~ h6 ~ *
+h6.bullets-collapsed ~ h1:not(.bullets-collapsed) ~ *,
+h6.bullets-collapsed ~ h2:not(.bullets-collapsed) ~ *,
+h6.bullets-collapsed ~ h3:not(.bullets-collapsed) ~ *,
+h6.bullets-collapsed ~ h4:not(.bullets-collapsed) ~ *,
+h6.bullets-collapsed ~ h5:not(.bullets-collapsed) ~ *,
+h6.bullets-collapsed ~ h6:not(.bullets-collapsed) ~ *
 {
 /*	border: none  !important;
 	background-color: transparent !important;
