--- a/example/lib/css/bullets.css
+++ b/example/lib/css/bullets.css
@@ -25,19 +25,7 @@ h6.bullets-collapsed ~ *:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6)
 }
 */
 
-h1.bullets-collapsed ~ *:not(h1:not(.bullets-collapsed) ~ *),
-h2.bullets-collapsed ~ *:not(h1):not(h2),
-h3.bullets-collapsed ~ *:not(h1):not(h2):not(h3),
-h4.bullets-collapsed ~ *:not(h1):not(h2):not(h3):not(h4),
-h5.bullets-collapsed ~ *:not(h1):not(h2):not(h3):not(h4):not(h5),
-h6.bullets-collapsed ~ *:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6)
-{
-	display: none;
-}
-
-/*GOOD*/
-
-/*h1.bullets-collapsed ~ *:not(h1),
+/*h1.bullets-collapsed ~ *:not(h1:not(.bullets-collapsed) ~ *),
 h2.bullets-collapsed ~ *:not(h1):not(h2),
 h3.bullets-collapsed ~ *:not(h1):not(h2):not(h3),
 h4.bullets-collapsed ~ *:not(h1):not(h2):not(h3):not(h4),
@@ -47,7 +35,19 @@ h6.bullets-collapsed ~ *:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6)
 	display: none;
 }*/
 
-/*h1.bullets-collapsed ~ h1:not(.bullets-collapsed) ~ *,
+/*GOOD*/
+
+h1.bullets-collapsed ~ *:not(h1),
+h2.bullets-collapsed ~ *:not(h1):not(h2),
+h3.bullets-collapsed ~ *:not(h1):not(h2):not(h3),
+h4.bullets-collapsed ~ *:not(h1):not(h2):not(h3):not(h4),
+h5.bullets-collapsed ~ *:not(h1):not(h2):not(h3):not(h4):not(h5),
+h6.bullets-collapsed ~ *:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6)
+{
+	display: none;
+}
+
+h1.bullets-collapsed ~ h1:not(.bullets-collapsed) ~ *,
 
 h2.bullets-collapsed ~ h1:not(.bullets-collapsed) ~ *,
 h2.bullets-collapsed ~ h2:not(.bullets-collapsed) ~ *,
@@ -75,4 +75,4 @@ h6.bullets-collapsed ~ h5:not(.bullets-collapsed) ~ *,
 h6.bullets-collapsed ~ h6:not(.bullets-collapsed) ~ *
 {
 	display: inherit;
-}*/
+}
