Remove superfluous jade extension

--- a/example/src/jade/index.jade
+++ b/example/src/jade/index.jade
@@ -4,7 +4,7 @@ html(lang="en")
     meta(charset="utf-8")
     title= "Bullets Demo"
     - var resourceBasePath = '../lib/'
-    include css.jade
-    include javascript.jade
+    include css
+    include javascript
   body
-    include content.jade
+    include content
