--- a/test/src/jade/collapse-selection-tests.jade
+++ b/test/src/jade/collapse-selection-tests.jade
@@ -1,4 +1,4 @@
-h1#test-1.bullets-collapsed(data-forward='h1-2') h1-1
+h1#cs-test-1.bullets-collapsed(data-forward='h1-2') h1-1
 div
   p p-1
   h3 h3-1
@@ -6,10 +6,10 @@ div
     li li-1
     li li-2
     li li-3
-h1#test-2(data-backward='h1-1' data-forward='h4-1') h1-2
+h1#cs-test-2(data-backward='h1-1' data-forward='h4-1') h1-2
 div
   p p-2
-  h4#test-3.bullets-collapsed(data-backward='h1-2' data-forward='h3-2') h4-1
+  h4#cs-test-3.bullets-collapsed(data-backward='h1-2' data-forward='h3-2') h4-1
   div
     h5 h5-1
     div
@@ -18,7 +18,7 @@ div
   div
     h6 h6-1
     div
-  h2#test-4.bullets-collapsed(data-backward='h6-1' data-forward='h1-3') h2-1
+  h2#cs-test-4.bullets-collapsed(data-backward='h6-1' data-forward='h1-3') h2-1
   div
     p p-4
     h6 h6-2
@@ -33,10 +33,10 @@ div
   div
     ul
       li li-7
-      li#test-5(data-backward='li-7' data-forward='li-9') li-8
+      li#cs-test-5(data-backward='li-7' data-forward='li-9') li-8
       li li-9
     ul
-      li#test-6.bullets-collapsed(data-backward='li-9' data-forward='li-13') li-10
+      li#cs-test-6.bullets-collapsed(data-backward='li-9' data-forward='li-13') li-10
         ul
           li li-11
           li li-12
@@ -45,14 +45,14 @@ div
           li li-14
           li li-15
     ul
-      li#test-7.bullets-collapsed(data-backward='li-15' data-forward='li-18') li-16
+      li#cs-test-7.bullets-collapsed(data-backward='li-15' data-forward='li-18') li-16
         ul
           li li-17
     ul
-      li#test-8(data-backward='li-16' data-forward='li-19') li-18
+      li#cs-test-8(data-backward='li-16' data-forward='li-19') li-18
     ul
       li li-19
-      li#test-9(data-backward='li-19' data-forward='li-21') li-20
+      li#cs-test-9(data-backward='li-19' data-forward='li-21') li-20
     p p-5
     ul
       li li-21
@@ -63,14 +63,14 @@ div
         ul
           li li-25
       li li-26
-        h1#test-10.bullets-collapsed(data-backward='li-26' data-forward='h1-5') h1-4
+        h1#cs-test-10.bullets-collapsed(data-backward='li-26' data-forward='h1-5') h1-4
         div
           ul
             li li-27
           p p-6
           h2 h2-2
           div
-        h1#test-11.bullets-collapsed(data-backward='h1-4' data-forward='li-28') h1-5
+        h1#cs-test-11.bullets-collapsed(data-backward='h1-4' data-forward='li-28') h1-5
         div
           h2 h2-3
           div
@@ -79,4 +79,4 @@ h2 h2-3
 div
   p p-7
   ul
-    li#test-12(data-backward='h2-3') li-29
+    li#cs-test-12(data-backward='h2-3') li-29
