--- a/test/src/jade/header-collapse-selection-tests.jade
+++ b/test/src/jade/header-collapse-selection-tests.jade
@@ -1,8 +1,41 @@
-h1#test-1.bullets-collapsed(data-forward='h1-2') h1-1
+h1#hcs-test-1.bullets-collapsed(data-forward='li-1') h1-1
 div
   p p-1
-h3 h3-1
+  h3 h3-1
 ol
   li li-1
   li li-2
   li li-3
+h1#hcs-test-2.bullets-collapsed(data-backward='li-3' data-forward='h4-1') h1-2
+h5 h5-1
+p p-2
+h4#hcs-test-3.bullets-collapsed(data-backward='h1-2' data-forward='li-4') h4-1
+p p-3
+p p-4
+ol
+  li li-4
+  li li-5
+h2#hcs-test-4.bullets-collapsed(data-backward='li-5' data-forward='h6-1') h2-1
+p p-5
+h6 h6-1
+ol
+  li li-6
+  li li-7
+  li li-8
+ul
+  li li-9
+    ul
+      li li-10
+  li li-11
+    h1#cs-test-10.bullets-collapsed(data-backward='li-11' data-forward='h2-2') h1-3
+    ul
+      li li-12
+    p p-6
+    h2 h2-2
+    h1#cs-test-11.bullets-collapsed(data-backward='h2-2' data-forward='li-13') h1-4
+    h2 h2-3
+  li li-13
+h2 h2-4
+p p-7
+ul
+  li#cs-test-12(data-backward='h2-4') li-14
