Setup failing header collapse selection tests

--- a/test/src/jade/header-collapse-selection-tests.jade
+++ b/test/src/jade/header-collapse-selection-tests.jade
@@ -27,15 +27,15 @@ ul
     ul
       li li-10
   li li-11
-    h1#cs-test-10.bullets-collapsed(data-backward='li-11' data-forward='h2-2') h1-3
+    h1#hcs-test-5.bullets-collapsed(data-backward='li-11' data-forward='h2-2') h1-3
     ul
       li li-12
     p p-6
     h2 h2-2
-    h1#cs-test-11.bullets-collapsed(data-backward='h2-2' data-forward='li-13') h1-4
+    h1#hcs-test-6.bullets-collapsed(data-backward='h2-2' data-forward='li-13') h1-4
     h2 h2-3
   li li-13
 h2 h2-4
 p p-7
 ul
-  li#cs-test-12(data-backward='h2-4') li-14
+  li#hcs-test-7(data-backward='h2-4') li-14
