Convert to jade

--- a/example/src/jade/content.jade
+++ b/example/src/jade/content.jade
@@ -1,4 +1,4 @@
-include:markdown ../markdown/header-content.md
-include:markdown ../markdown/complex-content.md
+include header-content
+include complex-content
 include:markdown ../markdown/ordered-list.md
 include:markdown ../markdown/unordered-list.md
