--- a/test/src/jade/collapse-selection-tests.jade
+++ b/test/src/jade/collapse-selection-tests.jade
@@ -75,8 +75,21 @@ div
           h2 h2-3
           div
       li li-28
+h1
+  a(href="http://www.example.com") a-1
+div
+  p p-7
+  h2#cs-test-12(data-backward='a-1' data-forward='h3-3') h2-4
+  div
+    p p-8
+    h3#cs-test-13(data-backward='h2-4' data-forward='h1-5') h3-3
+    div
+      p p-9
+h1 h1-5
+div
+  p p-10
 h2 h2-3
 div
   p p-7
   ul
-    li#cs-test-12(data-backward='h2-3') li-29
+    li#cs-test-14(data-backward='h2-3') li-29
