Change tabs to spaces

--- a/test/src/jade/collapse-selection-tests.jade
+++ b/test/src/jade/collapse-selection-tests.jade
@@ -87,9 +87,25 @@ div
       p p-9
 h1 h1-5
 div
-  p p-10
+  ol
+    li li-29
+    li li-30
+      ol
+        li#cs-test-14(data-backward='li-30' data-forward='li-32') li-31
+          ol
+          li li-32
+          li
+            a(href="http://www.example.com") a-2
+            ol
+              li li-33
+              li
+                a(href="http://www.example.com") a-3
+              li li-34
+    li li-35
+    li li-36
+    li li-37
 h2 h2-3
 div
   p p-7
   ul
-    li#cs-test-14(data-backward='h2-3') li-29
+    li#cs-test-15(data-backward='h2-3') li-29
