--- a/example/src/jade/css.jade
+++ b/example/src/jade/css.jade
@@ -1,3 +1,3 @@
-link(rel='stylesheet', href=resourceBasePath + 'css/bullets.css')
 link(rel='stylesheet', href=resourceBasePath + 'css/raster.css')
 link(rel='stylesheet', href=resourceBasePath + 'css/style.css')
+link(rel='stylesheet', href=resourceBasePath + '../../dist/bullets.css')
