--- a/example/src/jade/javascript.jade
+++ b/example/src/jade/javascript.jade
@@ -1,3 +1,3 @@
 script(src=resourceBasePath + 'js/mousetrap.js')
 script(src=resourceBasePath + 'js/mousetrap_config.js')
-script(src=resourceBasePath + '../../bullets.js')
+script(src=resourceBasePath + '../../dist/bullets.js')
